--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "concurrently": "^6.2.1"
   },
   "scripts": {
-    "dev": "concurrently \"cd client && npm run dev\" \"cd server && py api.py\""
+    "dev": "concurrently \"cd client && npm run dev\" \"cd server && python3 api.py\"",
+    "deploy": "concurrently \"cd client && npm run dev\" \"cd server && python3 api.py\""
   }
 }
